--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <script src="app.js"></script>
+  
   <title>Frontend Mentor | Interactive rating component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -19,54 +21,59 @@
 
     <div class="card-container">
 
-      <div class="star-circle">
-        <img src="images/icon-star.svg" alt="icon-star">
+      <div class="rating_section ">
+        <div class="star-circle">
+          <img src="images/icon-star.svg" alt="icon-star">
+        </div>
+  
+        <h1 class="title">
+          How did we do?
+        </h1>
+        <p class="paragraph">
+          Please let us know how we did with your support request. All feedback is appreciated 
+          to help us improve our offering!
+        </p>
+  
+        <div class="rating-circles">
+          <span class="circle">1</span>
+          <span class="circle">2</span>
+          <span class="circle">3</span>
+          <span class="circle">4</span>
+          <span class="circle">5</span>
+        </div>
+        <button class="button">
+          S U B M I T
+        </button>
+      </div>
+      <!-- Rating state end -->
+      
+      <!-- Thank you state start -->
+      <div class="thanks_section hidden">
+        <div class="image">
+          <img src="images/illustration-thank-you.svg" alt="thank you">
+        </div>
+        <div class="selection-part">
+          <p>You selected <span id="rate"></span> out of 5</p>
+        </div>
+        <h1 class="title">
+          Thank you!
+        </h1>
+        <p class="paragraph">
+          We appreciate you taking the time to give a rating. If you ever need more support, 
+          don’t hesitate to get in touch!
+        </p>
       </div>
 
-      <h1 class="title">
-        How did we do?
-      </h1>
-      <p>
-        Please let us know how we did with your support request. All feedback is appreciated 
-        to help us improve our offering!
-      </p>
-
-      <div class="rating-circles">
-        <div class="circle">
-          1
-        </div>
-        <div class="circle">
-          2
-        </div>
-        <div class="circle">
-          3
-        </div>
-        <div class="circle">
-          4
-        </div>
-        <div class="circle">
-          5
-        </div>
-      </div>
-      <button class="button">
-        S U B M I T
-      </button>
     </div>
 
   </div>
  
 
 
-  <!-- Rating state end -->
 
-  <!-- Thank you state start -->
 
-  <!-- You selected --> <!-- Add rating here --> <!-- out of 5
 
-  Thank you! -->
 
-  <!-- We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch! -->
 
   <!-- Thank you state end -->
 
