Interactive Js added

--- a/index.html
+++ b/index.html
@@ -6,21 +6,18 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  <script src="app.js"></script>
   
   <title>Frontend Mentor | Interactive rating component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   
 </head>
 <body>
 
-   <!-- Rating state start -->
-
-   <div class="card">
+  <!-- Rating state start -->
+  
+  <div class="card">
 
     <div class="card-container">
-
+      
       <div class="rating_section ">
         <div class="star-circle">
           <img src="images/icon-star.svg" alt="icon-star">
@@ -41,7 +38,7 @@
           <span class="circle">4</span>
           <span class="circle">5</span>
         </div>
-        <button class="button">
+        <button class="submit_button">
           S U B M I T
         </button>
       </div>
@@ -65,22 +62,14 @@
       </div>
 
     </div>
-
+    
   </div>
- 
-
-
-
-
-
-
-
   <!-- Thank you state end -->
-
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/aybegu">Ayca Berfin Gurler</a>.
   </div>
+  <script src="app.js"></script>
 </body>
 </html>
